test/arrays/diten/reduce3Dwith2D.good
reduce3Dwith2D.chpl:4: error: rank mismatch in zippered iteration (can't zip a 3D expression with a 2D array)
